[package]
name = "hashes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5.1"
base16ct = { version = "0.2", features = ["alloc"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
crc = "3.2.1"
gxhash = "3.4.1"
wyhash = "0.5.0"
cityhasher = { version = "*", default-features = false }
