[package]
name = "hashes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5.1"
twox-hash = { version = "2.1.2", features = ["std"] }
base16ct = { version = "0.2", features = ["alloc"] }
crc = "3.2.1"
gxhash = "3.4.1"
wyhash = "0.5.0"
cityhasher = { version = "*", default-features = false }
