[package]
name = "health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-health = "0.9.2"
tonic = { version = "0.9.2", features = ["gzip"] }
tokio = { version = "1.28.1", features = ["full"] }
