[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
tokio-rustls = "0.22"
hyper-rustls = "0.22"
futures = "0.3"
http = "0.2"
