[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
tokio-rustls = "0.22"
hyper-rustls = "0.22"
futures = "0.3"
http = "1"
http-body-util = "0.1.0"
bytes = "1.4"
hyper-util = { version = "0.1.0", features = ["client-legacy", "tokio", "http1"] }
tokio-util = { version = "0.7.8", features = ["full"] }
futures-util = "0.3.30"
hyper-tls = "0.6.0"
