[package]
name = "reqwest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.12.4", features = [
    "stream",
    "native-tls",
    "default-tls",
    "rustls-tls",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "blocking",
] }
