[package]
name = "stream"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tokio-stream = "0.1.17"
bytes = "1"
anyhow = "1"
vortex-protocol = "0.1.2"
chrono = { version = "0.4.41", features = ["serde", "clock"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
